antes del deploy

--- a/src/pages/css/inicio.css
+++ b/src/pages/css/inicio.css
@@ -1,5 +1,5 @@
 #home{
-    background-image: url("../img/home1.jpeg");
+    background-image: url("../img/home1.png");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh !important;
